# multimedia_media_foundation

./: AGENTS.md  BUILD.gn  CMakeLists.txt  OAT.xml  README.md  README_zh.md  bundle.json  config.gni  diff.patch  media_foundation.diff
engine/plugin/plugins/codec_adapter/: BUILD.gn  codec_buffer.cpp  codec_buffer.h  codec_buffer_pool.cpp  codec_buffer_pool.h  codec_cmd_executor.cpp  codec_cmd_executor.h  codec_port.cpp  codec_port.h  codec_utils.cpp  codec_utils.h  hdi_codec_adapter.cpp  hdi_codec_adapter.h  hdi_codec_manager.cpp  hdi_codec_manager.h
engine/plugin/plugins/sink/video_surface_sink/: BUILD.gn  surface_sink_plugin.cpp  surface_sink_plugin.h
engine/plugin/plugins/source/std_stream_source/: BUILD.gn
engine/plugin/plugins/source/stream_source/: BUILD.gn
engine/scene/: BUILD.gn
engine/scene/player/: BUILD.gn
engine/scene/player/lite/: hiplayer_impl.cpp
engine/scene/player/standard/: hiplayer_callback_looper.cpp  hiplayer_callback_looper.h  hiplayer_impl.cpp
engine/scene/recorder/: BUILD.gn
engine/scene/recorder/standard/: hirecorder_impl.cpp
services/media_monitor/: BUILD.gn  IMediaMonitor.idl
services/media_monitor/buffer/include/: dump_buffer_define.h  dump_buffer_manager.h
services/media_monitor/buffer/src/: dump_buffer_define.cpp  dump_buffer_manager.cpp
services/media_monitor/client/include/: media_monitor_base.h  media_monitor_client.h  media_monitor_death_recipient.h  media_monitor_manager.h  media_monitor_stub.h
services/media_monitor/client/src/: media_monitor_client.cpp  media_monitor_manager.cpp
services/media_monitor/common/include/: audio_dump_buffer.h  dump_buffer_wrap.h  event_bean.h  media_monitor_info.h  media_monitor_ipc_interface_code.h  monitor_error.h  monitor_utils.h  string_converter.h
services/media_monitor/common/src/: dump_buffer_wrap.cpp  event_bean.cpp  monitor_utils.cpp  string_converter.cpp
services/media_monitor/etc/: media_monitor.cfg  media_monitor.para  media_monitor.para.dac
services/media_monitor/sa_profile/: BUILD.gn  media_monitor.json
services/media_monitor/server/include/: audio_buffer_cache.h  audio_memo.h  event_aggregate.h  ffmpeg_api_wrap.h  media_audio_encoder.h  media_event_base_writer.h  media_monitor_policy.h  media_monitor_service.h  media_monitor_wrapper.h
services/media_monitor/server/src/: audio_buffer_cache.cpp  audio_memo.cpp  boundle_mgr_wrap_to_c.cpp  event_aggregate.cpp  ffmpeg_api_wrap.cpp  media_audio_encoder.cpp  media_event_base_writer.cpp  media_monitor_policy.cpp  media_monitor_service.cpp  media_monitor_stub.cpp  media_monitor_wrapper.cpp
services/media_monitor/test/unittest/: BUILD.gn
services/media_monitor/test/unittest/event_bean_test/: BUILD.gn
services/media_monitor/test/unittest/media_monitor_dt_test/: BUILD.gn
services/media_monitor/test/unittest/monitor_manger_test/: BUILD.gn
src/: BUILD.gn  (+1 more)
src/capi/: BUILD.gn  native_audio_vivid.cpp  native_avbuffer.cpp  native_avformat.cpp  native_avmemory.cpp
src/capi/common/: native_mfmagic.cpp
test/unittest/: BUILD.gn  CMakeLists.txt  TestAny.cpp  TestAudioCapturePlugin.cpp  TestDataPacker.cpp  TestFFmpegAvcConfigDataParser.cpp  TestFFmpegDemuxer.cpp  TestFFmpegVideoDecoder.cpp  TestMediaSource.cpp  TestMimeDefs.cpp  TestPipline.cpp  TestPlugin.cpp  TestPluginBase.cpp  TestPluginDefinition.cpp  TestPluginManager.cpp  TestPluginSetting.cpp  TestSurfaceSinkPlugin.cpp  TestSynchronizer.cpp  TestWavDemuxerPlugin.cpp
test/unittest/pipeline/: BUILD.gn
test/unittest/plugins/: BUILD.gn
tests/unittest/audio_vivid/: BUILD.gn  audio_vivid_unit_test.cpp  audio_vivid_unit_test.h
tests/unittest/avmemory_unittest/: BUILD.gn  avmemory_unittest.cpp  avmemory_unittest.h
tests/unittest/avmemory_unittest/mock/: parcel.cpp  parcel.h
tests/unittest/detail_enhancer_video_ndk/: BUILD.gn  detail_enhancer_video_ndk.cpp  detail_enhancer_video_ndk_unit_test.cpp
tests/unittest/detail_enhancer_video_ndk/sample/: video_sample.cpp  video_sample.h
tests/unittest/native_avformat_unittest/: BUILD.gn  avformat_unit_test.cpp  avformat_unit_test.h
video_processing_engine/: config.gni
video_processing_engine/framework/: BUILD.gn
video_processing_engine/framework/algorithm/detail_enhancer/: detail_enhancer.cpp
video_processing_engine/framework/algorithm/detail_enhancer/include/: detail_enhancer.h
video_processing_engine/framework/algorithm/detail_enhancer/skia/: skia_impl.cpp
video_processing_engine/framework/algorithm/include/: algorithm_types.h
video_processing_engine/framework/capi/image_processing/: image_prcessing.cpp  image_processing.cpp  image_processing_capability.cpp  image_processing_impl.cpp  image_processing_loader.cpp  image_processing_native.cpp
video_processing_engine/framework/capi/image_processing/detail_enhancer/: detail_enhancer_image_native.cpp
video_processing_engine/framework/capi/image_processing/include/: image_processing_capability.h  image_processing_impl.h  image_processing_loader.h  image_processing_native.h
video_processing_engine/framework/capi/video_processing/: video_processing.cpp  video_processing_callback_impl.cpp  video_processing_callback_native.cpp  video_processing_capability.cpp  video_processing_impl.cpp  video_processing_loader.cpp  video_processing_native.cpp
video_processing_engine/framework/capi/video_processing/detail_enhancer/: detail_enhancer_video_native.cpp
video_processing_engine/framework/capi/video_processing/include/: video_processing_callback_impl.h  video_processing_callback_native.h  video_processing_capability.h  video_processing_impl.h  video_processing_loader.h  (+1 more)
video_processing_engine/framework/dfx/include/: vpe_log.h
video_processing_engine/interface/inner_api/: image_processing_capi_interface.h  video_processing_capi_interface.h
video_processing_engine/interface/kits/c/: image_processing.h  image_processing_types.h  video_processing.h  video_processing_types.h
video_processing_engine/test/: BUILD.gn
video_processing_engine/test/moduletest/common/: enum_list.h
video_processing_engine/test/moduletest/video/: BUILD.gn  api_test.cpp
(+379 files in other folders)
