# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

vpe_base_root_dir = "//foundation/multimedia/media_foundation"
vpe_capi_root_dir = "$vpe_base_root_dir/video_processing_engine"

vpe_framework_dir = "$vpe_capi_root_dir/framework"

vpe_algorithm_dir = "$vpe_framework_dir/algorithm"
vpe_capi_dir = "$vpe_framework_dir/capi"
vpe_dfx_dir = "$vpe_framework_dir/dfx"

vpe_capi_image_dir = "$vpe_capi_dir/image_processing"
vpe_capi_video_dir = "$vpe_capi_dir/video_processing"

vpe_interface_dir = "$vpe_capi_root_dir/interface"
vpe_interface_capi_dir = "$vpe_interface_dir/kits/c"

vpe_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]