# Copyright (c) 2022-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//foundation/multimedia/media_foundation/config.gni")
import("//foundation/multimedia/player_framework/config.gni")

ohos_source_set("std_engine_factory") {
  subsystem_name = "multimedia"
  part_name = "media_foundation"
  if (hst_is_standard_sys) {
    include_dirs = [
      "//foundation/multimedia/media_foundation/engine",
      "//foundation/multimedia/player_framework/services/services/engine_intf",
      "//base/startup/init/interfaces/innerkits/include/syspara",
    ]
    public_deps = [ "//foundation/multimedia/media_foundation/engine/foundation:histreamer_foundation" ]
    public_configs =
        [ "//foundation/multimedia/media_foundation:histreamer_presets" ]
    sources = [ "standard/hst_engine_factory.cpp" ]
    deps = [ "player:histreamer_player" ]
    external_deps = [
      "graphic_2d:color_manager",
      "graphic_surface:surface",
      "hilog:libhilog",
      "init:libbegetutil",
    ]
    if (media_foundation_enable_recorder) {
      deps += [ "recorder:histreamer_recorder" ]
    }
    defines = []
    defines += player_framework_defines
  }
}

ohos_source_set("scene_common") {
  subsystem_name = "multimedia"
  part_name = "media_foundation"
  include_dirs = [
    "//foundation/multimedia/media_foundation/engine",
    "//foundation/multimedia/media_foundation/engine/include",
  ]
  public_deps = [
    "//foundation/multimedia/media_foundation/engine/foundation:histreamer_foundation",
    "//foundation/multimedia/media_foundation/engine/pipeline:histreamer_base",
  ]
  sources = [
    "common/data_stream.cpp",
    "common/data_stream_impl.cpp",
    "common/media_stat_stub.cpp",
  ]
  public_configs =
      [ "//foundation/multimedia/media_foundation:histreamer_presets" ]
  if (hst_is_standard_sys) {
    external_deps = [ "hilog:libhilog" ]
  }
}
