# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/multimedia/media_foundation/config.gni")
import("$histreamer_root_dir/video_processing_engine/config.gni")

ohos_shared_library("image_processing") {
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    integer_overflow = true
    ubsan = true
    debug = false
  }

  stack_protector_ret = true

  cflags = vpe_cflags
  cflags += [
    "-ffunction-sections",
    "-fdata-sections",
  ]

  ldflags = [ "-W1,--gc-sections" ]

  include_dirs = [
    "$vpe_interface_capi_dir",
    "$vpe_dfx_dir/include",
    "$vpe_capi_image_dir/include",
  ]

  sources = [
    "$vpe_capi_image_dir/image_processing.cpp",
    "$vpe_capi_image_dir/image_processing_loader.cpp",
  ]

  deps = [ "$vpe_base_root_dir/src:media_foundation" ]

  external_deps = [
    "c_utils:utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
  ]

  output_extension = "so"
  subsystem_name = "multimedia"
  innerapi_tags = [ "ndk" ]
  part_name = "media_foundation"
}