# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")

module_output_path = "media_foundation/media_foundation/unittest"

config("media_foundation_unittest_config") {
  include_dirs = [
    "${histreamer_root_dir}/interface/kits/c",
    "${histreamer_root_dir}/interface/inner_api",
    "${histreamer_root_dir}/interface/inner_api/meta",
    "${histreamer_root_dir}/engine/include",
  ]
}

ohos_unittest("audio_vivid_meta_unit_test") {
  module_out_path = module_output_path

  sources = [
    "audio_vivid_unit_test.cpp",
  ]

  configs = [
    ":media_foundation_unittest_config",
  ]

  deps = [
    "${histreamer_root_dir}/src:media_foundation",
    "${histreamer_root_dir}/src/capi:native_media_core",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}
