# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")
import("//foundation/multimedia/media_foundation/video_processing_engine/config.gni")

ohos_unittest("detail_enhancer_video_ndk_unit_test") {
    module_out_path = "media_foundation/unittest"

    sanitize = {
        cfi = true
        cfi_cross_dso = true
        debug = false
    }

    cflags = [
        "-std=c++17",
        "-fno-rtti",
        "-fexceptions",
        "-Wall",
        "-fno-common",
        "-fstack-protector-strong",
        "-Wshadow",
        "-FPIC",
        "-FS",
        "-O2",
        "-D_FORTIFY_SOURCE=2",
        "-fvisibility=hidden",
        "-Wformat=2",
        "-Wdate-time",
        "-Wextra",
        "-Wimplicit-fallthrough",
        "-Wsign-compare",
        "-Dprivate=public",
        "-Dprotected=public",
    ]

    include_dirs = [
        "$vpe_interface_capi_dir",
        "$vpe_interface_inner_dir",
        "$vpe_dfx_dir/include",
        "$vpe_capi_video_dir/include",
    ]

    sources = [ "detail_enhancer_video_ndk_unit_test.cpp" ]

    deps = [
        "$histreamer_root_dir/interface/kits/ndk/core:libnative_media_core",
        "$vpe_base_root_dir/src:media_foundation",
        "$vpe_interface_capi_dir/video_processing:libvideo_processing_ndk",
        "$vpe_framework_dir:video_processing",
    ]

    external_deps = [
        "graphic_surface:surface",
        "hilog:libhilog",
        "hitrace:hitrace_meter",
        "media_foundation:native_media_core",
    ]

    subsystem_name = "multimedia"
    part_name = "media_foundation"
}
