# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")

module_output_path = "media_foundation/unittest"

group("detail_enhancer_video_ndk_unit_test") {
  testonly = true
  deps = [ ":detail_enhancer_video_ndk_inner_unit_test" ]
}

#################################################################################################################
detail_enhancer_video_ndk_unit_test_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Dprivate=public",
  "-Dprotected=public",
]

ohos_unittest("detail_enhancer_video_ndk_inner_unit_test") {
  module_out_path = module_output_path

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "$histreamer_root_dir/video_processing_engine/interface/kits/c",
    "$histreamer_root_dir/video_processing_engine/interface/inner_api",
    "$histreamer_root_dir/video_processing_engine/framework/dfx/include",
    "$histreamer_root_dir/video_processing_engine/framework/capi/video_processing/include",
  ]

  sources = [ "./detail_enhancer_video_ndk_unit_test.cpp" ]

  cflags = detail_enhancer_video_ndk_unit_test_cflags

  deps = [
    "$histreamer_root_dir/interface/kits/ndk/core:libnative_media_core",
    "$histreamer_root_dir/src:media_foundation",
    "$histreamer_root_dir/video_processing_engine/framework:video_processing",
    "$histreamer_root_dir/video_processing_engine/interface/kits/c/video_processing:libvideo_processing_ndk",
  ]

  external_deps = [
    "graphic_surface:surface",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "media_foundation:native_media_core",
  ]
}
