# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")

module_output_path = "media_foundation/media_foundation/unittest"

ohos_unittest("native_avformat_unittest") {
  module_out_path = module_output_path

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "./",
    "../../../interface/kits/c",
    "../../../src/buffer/avbuffer_queue/include/",
    "../../../interface/innerapi/",
    "../../../interface/inner_api/common/",
    "../../../interface/inner_api/meta/",
  ]

  sources = [ "./avformat_unit_test.cpp" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  deps = [
    "$histreamer_root_dir/src:media_foundation",
    "$histreamer_root_dir/src/capi:native_media_core",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "googletest:gmock",
    "graphic_surface:surface_static",
    "graphic_surface:sync_fence_static",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:libhitracechain",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
  ]
}