# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")
import("$histreamer_root_dir/video_processing_engine/config.gni")

video_moduletest_native_include_dirs = [
  "$vpe_interface_capi_dir",
  "$vpe_capi_root_dir/test/moduletest/common",
  "$vpe_capi_root_dir/../../../graphic/graphic_2d/interfaces/inner_api",
  "$vpe_capi_root_dir/../../../window/window_manager/interfaces/innerkits",
]

video_moduletest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

##################################################################################################################
ohos_unittest("vpe_video_native_module_test") {
  module_out_path = "media_foundation/moduletest"
  include_dirs = video_moduletest_native_include_dirs
  include_dirs += [ "./" ]
  cflags = video_moduletest_cflags

  sources = [ "api_test.cpp" ]

  deps = [
    "$vpe_capi_root_dir/framework:video_processing",
    "//third_party/googletest:gtest_rtti",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:libgraphic_utils",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "hilog:libhilog",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
    "window_manager:libwm",
  ]
}
