# Copyright (c) 2022-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//foundation/multimedia/media_foundation/config.gni")
group("plugin_standard_video_surface_sink") {
  if (hst_is_standard_sys) {
    deps += [ ":histreamer_plugin_StdVideoSurfaceSink" ]
  }
}

if (hst_is_standard_sys) {
  import("//build/ohos.gni")
  ohos_shared_library("histreamer_plugin_StdVideoSurfaceSink") {
    subsystem_name = "multimedia"
    part_name = "media_foundation"
    include_dirs = [ "//foundation/multimedia/media_foundation/engine/include" ]
    sources = [ "surface_sink_plugin.cpp" ]
    public_configs = [ "//foundation/multimedia/media_foundation:histreamer_presets" ]
    public_deps = [
      "//foundation/multimedia/media_foundation/engine/foundation:histreamer_foundation",
      "//foundation/multimedia/media_foundation/engine/plugin:histreamer_plugin_base",
    ]
    deps = []
    external_deps = [
      "bounds_checking_function:libsec_shared",
      "c_utils:utils",
      "c_utils:utilsbase",
      "drivers_interface_display:libdisplay_composer_proxy_1.0",
      "drivers_interface_display:libdisplay_composer_proxy_1.1",
      "drivers_interface_display:libdisplay_composer_proxy_1.2",
      "graphic_2d:libgraphic_utils",
      "graphic_surface:surface",
      "graphic_surface:sync_fence",
      "hilog:libhilog",
      "hitrace:hitrace_meter",
      "init:libbeget_proxy",
      "ipc:ipc_core",
    ]
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
    }
    relative_install_dir = "media/histreamer_plugins"
  }
}
